name:                hds-hs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/rprospero/hds-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Adam Washington
maintainer:          rprospero@gmail.com
copyright:           2017 Adam Washington
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  other-modules:       HDF.Types
  build-depends:       base >= 4.7 && < 5
                     , binary
  ghc-options: -Wall
  default-language:    Haskell2010

executable hds-hs-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hds-hs
  default-language:    Haskell2010

test-suite hds-hs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hds-hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rprospero/hds-hs
